@@ -1,5 +1,11 @@
 # $Id$
 
+2008-08-30	Konstantin V. Arkhipov
+
+	* core/Form/Primitives/BasePrimitive.class.php,
+	core/Form/Primitives/PrimitiveDomDocument.class.php: getErrorLabel()
+	moved down to PrimitiveDomDocument because no one else uses it.
+
 2008-08-28	Konstantin V. Arkhipov
 
 	* core/Form/Primitives/PrimitiveEnumeration.class.php: now tries to
